fix: :lipstick: Fix positioning and spacing between sup tag and text
Fix positioning and spacing between sup tag and text on table footer of adults page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1225,6 +1225,16 @@
                 }
             }
 
+            .table__footer {
+                sup {
+                    left: 3px;
+                }
+
+                span {
+                    text-indent: -3px;
+                }
+            }
+
             td,
             th {
                 text-align: left;
